--- a/css/index.css
+++ b/css/index.css
@@ -278,3 +278,18 @@ body {
 }
 .navmenu__ul {
 }
+
+.main {
+}
+
+.parallax__picture {
+  top: 0px;
+  bottom: 0px;
+}
+.background__div {
+}
+.background__a {
+}
+
+.trends__section {
+}
