--- a/css/index.css
+++ b/css/index.css
@@ -233,10 +233,6 @@ body {
   height: 1.75rem;
   fill: #ffffff;
   transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
 }
 .login__svg--user {
   width: 1.75rem;
@@ -265,13 +261,15 @@ body {
   gap: 1.875rem;
 }
 .navmenu {
+  width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: center;
   backdrop-filter: blur(60px) saturate(100%);
   padding: 0.5rem;
   border-radius: 4rem;
-  -webkit-border-radius: 4rem;
-  -moz-border-radius: 4rem;
-  -ms-border-radius: 4rem;
-  -o-border-radius: 4rem;
+
   position: relative;
 
   opacity: 1;
@@ -301,16 +299,8 @@ body {
   padding: 1.5rem;
 
   border-radius: 3rem;
-  -webkit-border-radius: 3rem;
-  -moz-border-radius: 3rem;
-  -ms-border-radius: 3rem;
-  -o-border-radius: 3rem;
 
   transition: width 0.3s ease;
-  -webkit-transition: width 0.3s ease;
-  -moz-transition: width 0.3s ease;
-  -ms-transition: width 0.3s ease;
-  -o-transition: width 0.3s ease;
 
   position: absolute;
   top: 0;
@@ -323,10 +313,6 @@ body {
 .navmenu__search:hover {
   .navmenu__svg--magnify {
     transform: scale(1.2);
-    -webkit-transform: scale(1.2);
-    -moz-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    -o-transform: scale(1.2);
   }
 }
 .navmenu__search.is--active {
@@ -376,10 +362,6 @@ body {
   margin: auto;
 
   transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
 }
 .navmenu__svg--close {
   width: 2rem;
@@ -388,10 +370,6 @@ body {
   pointer-events: none;
 
   transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
 }
 .navmenu__close {
   display: none;
@@ -441,6 +419,124 @@ body {
   flex-flow: row nowrap;
   justify-content: flex-start;
   align-items: center;
+}
+.submenu {
+  width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  backdrop-filter: blur(60px) saturate(100%);
+  padding: 1.5rem;
+  border-radius: 0.75rem;
+}
+.submenu__platforms {
+  width: 100%;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+
+  color: white;
+  background-color: #ffffff20;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.25rem;
+}
+
+.submenu__gifts {
+  width: 100%;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+
+  color: white;
+  background-color: #ffffff20;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.25rem;
+}
+
+.submenu__link {
+}
+.submenu__arrow {
+  width: 1.25rem;
+  height: 1.25rem;
+  fill: white;
+}
+.submenu__grid {
+}
+.grid {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+
+  padding: 0 0.5rem;
+}
+.grid__li {
+  width: 100%;
+}
+.grid__li:hover {
+  background-color: #ffffff20;
+  border-radius: 32px;
+}
+.grid__link {
+  width: 100%;
+
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.5rem;
+
+  padding: 0.5rem;
+  color: white;
+  white-space: nowrap;
+
+  cursor: pointer;
+}
+.grid__img {
+  width: auto;
+  height: 35px;
+}
+.grid__name {
+}
+
+.flex {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+
+  padding: 0.25rem 0;
+}
+.flex__li {
+  width: 100%;
+}
+.flex__link {
+  width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+
+  padding: 0.25rem 1rem;
+
+  white-space: nowrap;
+}
+.flex__link:hover {
+  background-color: #ffffff20;
+  border-radius: 8px;
+}
+.flex__img {
+  width: auto;
+  height: 35px;
+}
+.flex__name {
+  color: white;
 }
 
 .main {
