--- a/css/index.css
+++ b/css/index.css
@@ -83,7 +83,6 @@ h6,
 p,
 span,
 a,
-strong,
 blockquote,
 i,
 b,
@@ -94,6 +93,9 @@ em {
   font-style: inherit;
   text-decoration: none;
   color: inherit;
+}
+strong {
+  font-weight: 700;
 }
 /* Fin */
 
@@ -159,7 +161,7 @@ svg {
 
 /* Configuramos la tipografía para toda la web */
 body {
-  min-height: 100vh;
+  min-height: 100svh;
   font-size: 100%;
   font-family: "Barlow", sans-serif;
   font-weight: 400;
@@ -169,11 +171,11 @@ body {
 /* Fin */
 
 /* FIN RESET GLOBAL */
-.normal-wrapper {
+.normal__wrapper {
   margin: auto;
   width: 97%;
 }
-.narrow-wrapper {
+.narrow__wrapper {
   margin: auto;
   width: 65%;
 }
@@ -204,8 +206,7 @@ body {
 }
 .header__wrapper {
 }
-.header__wrapper--narrow {
-}
+
 .menu {
   display: flex;
   flex-flow: column nowrap;
@@ -559,7 +560,7 @@ body {
 
 .main {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100svh;
 }
 .parallax__picture {
 }
@@ -569,21 +570,25 @@ body {
 .background__a {
 }
 
-.trends__section {
+.trends__section,
+.reservations__section {
   width: 100%;
-  min-height: 50vh;
+  min-height: 75svh;
 }
 
-.trends__wrapper {
+.trends__wrapper,
+.reservations__wrapper {
 }
-.trends__column {
+.trends__column,
+.reservations__column {
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: center;
   gap: 3rem;
 }
-.trends__link {
+.trends__link,
+.reservations__link {
   width: 100%;
   display: flex;
   flex-flow: row nowrap;
@@ -591,17 +596,20 @@ body {
   align-items: flex-start;
   gap: 0.5rem;
 }
-.trends__svg {
+.trends__svg,
+.reservations__svg {
   width: 1.5rem;
   height: 1.5rem;
   margin-top: 0.5rem;
   fill: var(--color-medium-light);
 }
-.trends__h2 {
+.trends__h2,
+.reservations__h2 {
   font-size: 2rem;
   font-weight: 500;
 }
-.trends__container {
+.trends__container,
+.reservations__container {
 }
 .listing {
   width: 100%;
@@ -646,6 +654,10 @@ body {
 }
 .listing__video {
   border-radius: 10px;
+
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   position: absolute;
   top: 0;
   left: 0;
@@ -687,4 +699,148 @@ body {
 }
 .listing__price {
   font-size: 1.5em;
+}
+
+.listing__reservation {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+
+  gap: 0.5rem;
+}
+.listing__order {
+  font-size: 11px;
+  color: #448eef;
+  padding: 0.25rem;
+  border: 1px solid #448eef;
+  border-radius: 3px;
+}
+.listing__date {
+  font-size: 13px;
+  color: #448eef;
+}
+
+.trust__section {
+  width: 100%;
+  min-height: 10svh;
+  margin: 3rem 0;
+  background-color: var(--color-ultra-dark);
+}
+.trust__wrapper {
+}
+.trust__contain {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 1.25rem 0;
+}
+.trust__li {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+
+  gap: 1rem;
+}
+.trust__separator {
+  width: 1px;
+  height: 70px;
+  background-color: var(--color-medium-dark);
+}
+.trust__svg {
+  width: 2rem;
+  height: 2rem;
+  fill: var(--main-color);
+}
+.trust__texts {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: flex-start;
+
+  gap: 0.25rem;
+}
+.trust__maintext {
+  font-size: 23px;
+  font-weight: 500;
+  color: var(--color-white);
+}
+.trust__subtext {
+  font-size: 15px;
+  color: var(--color-light);
+}
+.trust__link {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: flex-start;
+
+  gap: 0.5rem;
+}
+.trust__title {
+  width: 8rem;
+  height: auto;
+}
+.trust__stars {
+  width: 13rem;
+  height: auto;
+}
+.trust__score {
+  font-size: 14px;
+}
+
+.partner__section {
+  width: 100%;
+  margin: 3rem 0;
+  background-color: var(--color-medium-dark);
+}
+.partner__wrapper {
+}
+.partner__container {
+  width: 100%;
+  min-height: 35svh;
+  position: relative;
+
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+}
+.partner__img {
+  width: 17.5rem;
+  height: 22.25rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.partner__column {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+
+  margin: 3rem 0 3rem 20rem;
+
+  gap: 2rem;
+}
+.partner__stars {
+  width: 100px;
+  height: 15px;
+}
+.partner__p {
+  color: var(--color-light);
+  font-size: 19px;
+  text-align: center;
+}
+.partner__btn {
+  padding: 1.2rem 1.5625rem;
+  background: var(--fire-gradient);
+  border-radius: 0.5rem;
+  font-size: 17px;
+  font-weight: 500;
+  white-space: nowrap;
 }
