--- a/css/index.css
+++ b/css/index.css
@@ -571,7 +571,7 @@ body {
 }
 
 .trends__section,
-.reservations__section {
+.reservations__div {
   width: 100%;
   min-height: 75svh;
 }
@@ -843,4 +843,83 @@ body {
   font-size: 17px;
   font-weight: 500;
   white-space: nowrap;
+}
+
+.comments__container {
+  width: 100%;
+  min-height: 20svh;
+  background-color: var(--color-dark);
+}
+.comments__wrapper {
+}
+.comments__ul {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+
+  gap: 2rem;
+}
+.comments__li {
+  width: fit-content;
+  height: fit-content;
+  background-color: var(--color-medium-dark);
+  padding: 1rem;
+
+  border-radius: 0.625rem;
+
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
+
+  gap: 1rem;
+}
+.comments__user {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+
+  gap: 1rem;
+}
+.comments__avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.comments__info {
+  width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: flex-start;
+
+  gap: 0.5rem;
+}
+.comments__stars {
+  width: 80px;
+  height: 12px;
+}
+.comments__link {
+  width: 250px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.comments__column {
+  width: 100%;
+  height: 6rem;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
+
+  gap: 2rem;
+}
+.comments__p {
+}
+.comments__span {
 }
