--- a/css/index.css
+++ b/css/index.css
@@ -740,17 +740,26 @@ body {
 }
 
 .cards {
+  width: 100vw;
+  padding: 0 30px;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  gap: 30px;
 }
 .cards__li {
+  width: calc(25% - 30px);
+}
+.cards__li:hover {
+  .cards__img {
+    opacity: 0;
+  }
+  .cards__video {
+    opacity: 1;
+  }
 }
 .cards__article {
-  width: fit-content;
-  height: fit-content;
+  width: auto;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
@@ -772,7 +781,7 @@ body {
   opacity: 1;
 }
 .cards__video {
-  border-radius: 10px;
+  border-radius: 10px 10px 0 0;
 
   width: 100%;
   height: 100%;
@@ -791,15 +800,29 @@ body {
   justify-content: center;
   align-items: center;
   gap: 0.625rem;
+  padding: 1.5rem 0;
 }
 .cards__icons {
   width: 60px;
   height: 60px;
   border-radius: 50%;
 }
-.cards__p {
+.cards__icons:nth-child(1):hover {
+  outline: 2px solid var(--main-color);
+}
+.cards__text {
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  margin: 0 1.5rem 1.5rem;
+
   overflow: hidden;
   text-overflow: ellipsis;
+}
+.cards__p {
+  line-height: 23px;
+
+  color: var(--color-light);
 }
 
 .trust__div {
