--- a/css/index.css
+++ b/css/index.css
@@ -578,7 +578,8 @@ body {
 .reservations__section,
 .bestseller__section,
 .reviews__section,
-.indie__section {
+.indie__section,
+.news__section {
   width: 100%;
   min-height: 75svh;
   padding: 3.75rem 0;
@@ -587,12 +588,14 @@ body {
 .trends__wrapper,
 .reservations__wrapper,
 .bestseller__wrapper,
-.reviews__wrapper {
+.reviews__wrapper,
+.news__section {
 }
 .trends__column,
 .reservations__column,
 .bestseller__column,
-.reviews__column {
+.reviews__column,
+.news__column {
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
@@ -604,7 +607,8 @@ body {
 .reservations__link,
 .bestseller__link,
 .reviews__link,
-.indie__link {
+.indie__link,
+.news__link {
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-start;
@@ -615,7 +619,8 @@ body {
 .reservations__svg,
 .bestseller__svg,
 .reviews__svg,
-.indie__svg {
+.indie__svg,
+.news__svg {
   width: 1.75rem;
   height: 1.75rem;
   margin-top: 0.5rem;
@@ -625,13 +630,15 @@ body {
 .reservations__h2,
 .bestseller__h2,
 .reviews__h2,
-.indie__h2 {
+.indie__h2,
+.news__h2 {
   font-size: 2rem;
   font-weight: 500;
 }
 .trends__container,
 .reservations__container,
-.bestseller__container {
+.bestseller__container,
+.news__container {
 }
 .listing {
   width: 100%;
@@ -648,6 +655,15 @@ body {
   grid-gap: 1rem;
 
   padding: 40px 0;
+}
+.listingnews {
+  width: 100%;
+
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1.875rem;
 }
 .listing__li,
 .listingindie__li {
@@ -1122,4 +1138,49 @@ body {
   left: 18%;
 
   pointer-events: none;
+}
+.news__li {
+}
+.news__a {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+.news__img {
+  width: 25%;
+  object-fit: cover;
+
+  border-radius: 8px;
+}
+.news__div {
+  width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 1rem;
+}
+.news__date {
+  color: hsla(0, 0%, 100%, 0.5);
+}
+.news__h4 {
+  font-size: 17px;
+  line-height: 25px;
+}
+.news__p {
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  line-height: 22px;
+  margin-top: 5px;
+  opacity: 0.5;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.news__separator {
+  border-bottom: 1px solid hsla(0, 0%, 100%, 0.1);
+  margin-top: 30px;
 }
