--- a/css/index.css
+++ b/css/index.css
@@ -188,7 +188,7 @@ body {
   top: 0;
   left: 0;
 
-  z-index: 1;
+  z-index: 2;
 }
 .header__div {
   width: 100%;
@@ -737,7 +737,7 @@ body {
   background-color: var(--main-color);
   border-radius: 5px 6px 0;
   padding: 5px 6px 6px 7px;
-  z-index: 2;
+  z-index: 1;
   font-weight: 500;
 }
 .listing__discount::after,
@@ -1216,9 +1216,12 @@ body {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-  gap: 2rem;
+  row-gap: 4rem;
+  column-gap: 1rem;
 }
 .catgrid__cat {
+  width: fit-content;
+  z-index: 1;
 }
 .catgrid__cat:hover {
   .catgrid__icon {
@@ -1244,6 +1247,7 @@ body {
   position: absolute;
   left: 5%;
   top: calc(100% - (253px / 2));
+  z-index: 1;
 }
 .catgrid__icon {
   width: auto;
@@ -1252,4 +1256,6 @@ body {
   position: absolute;
   right: 0;
   bottom: 0;
+
+  transition: all 0.3s ease;
 }
